# udaq-timing

./: CMakeLists.txt  README.md
cmake/: timinglibsConfig.cmake.in
docs/: README.md
include/timinglibs/: TimestampEstimator.hpp  TimestampEstimatorBase.hpp  TimestampEstimatorSystem.hpp  TimingIssues.hpp
plugins/: FakeHSIEventGenerator.cpp  FakeHSIEventGenerator.hpp  HSIController.cpp  HSIController.hpp  HSIReadout.cpp  HSIReadout.hpp  TimingEndpointController.cpp  TimingEndpointController.hpp  TimingFanoutController.cpp  TimingFanoutController.hpp  TimingHardwareManager.cpp  TimingHardwareManager.hpp  TimingHardwareManagerPDI.cpp  TimingHardwareManagerPDI.hpp  TimingHwCmdNQ.cpp  TimingMasterController.cpp  TimingMasterController.hpp  TimingPartitionController.cpp  TimingPartitionController.hpp
plugins/detail/: TimingHardwareManager.hxx
python/timing/: timing_app_confgen.py
python/timinglibs/: fake_hsi_app_confgen.py  hsi_app_confgen.py  timing_app_confgen.py
python/timinglibs/nanorc/: fake_hsi_gen.py  mdapp_gen.py  rudf_gen.py  trigger_gen.py
schema/: README.md  generate.sh  timing-TimingEndpointController-make.jsonnet  timing-TimingEndpointController-schema.jsonnet  timing-TimingHardwareManager-make.jsonnet  timing-TimingHardwareManager-schema.jsonnet  timing-TimingHardwareManagerPDI-make.jsonnet  timing-TimingHardwareManagerPDI-schema.jsonnet  timing-TimingMasterController-make.jsonnet  timing-TimingMasterController-schema.jsonnet  timing-TimingPartitionController-make.jsonnet  timing-TimingPartitionController-schema.jsonnet  timing-timingcmd-make.jsonnet  timing-timingcmd-schema.jsonnet  timing-timingmon-schema.jsonnet  timing_job.jsonnet  udaqtiming-TimingHardwareManager-make.jsonnet  udaqtiming-TimingHardwareManager-schema.jsonnet  udaqtiming-TimingMasterController-schema.jsonnet  udaqtiming-TimingPartitionController-make.jsonnet  udaqtiming-TimingPartitionController-schema.jsonnet  udaqtiming-timingcmd-make.jsonnet  udaqtiming-timingcmd-schema.jsonnet
schema/timing/: timingcmd.jsonnet  timinghardwaremanagerpdi.jsonnet
schema/timinglibs/: fakehsieventgenerator.jsonnet  fakehsieventgeneratorinfo.jsonnet  hsicontroller.jsonnet  hsicontrollerinfo.jsonnet  hsireadout.jsonnet  hsireadoutinfo.jsonnet  timingcmd.jsonnet  timingendpointcontroller.jsonnet  timingendpointcontrollerinfo.jsonnet  timingfanoutcontroller.jsonnet  timingfanoutcontrollerinfo.jsonnet  timinghardwaremanagerpdi.jsonnet  timinghardwaremanagerpdiinfo.jsonnet  timingmastercontroller.jsonnet  timingmastercontrollerinfo.jsonnet  timingpartitioncontroller.jsonnet  timingpartitioncontrollerinfo.jsonnet
src/: CommonIssues.hpp  HSIInterface.cpp  HSIInterface.hpp  InfoGatherer.hpp  InfoGathererInterface.hpp  ModuleMonitor.hpp  TimestampEstimator.cpp  TimestampEstimatorBase.cpp  TimestampEstimatorSystem.cpp  TimingController.cpp  TimingController.hpp  TimingHardwareManager.hpp  TimingIssues.hpp
src/detail/: TimingHardwareManager.hxx
test/: timing_app.json  timing_cmds.json
test/src/: HSIInterface.cpp  HSIInterface.hpp
unittest/: TimestampEstimatorSystem_test.cxx  TimestampEstimator_test.cxx
